fix: Handle candidates without verified creators